--- a/AvaloniaTetris/Views/MainWindow.axaml
+++ b/AvaloniaTetris/Views/MainWindow.axaml
@@ -59,6 +59,16 @@
 				   Margin="20"
 				   Width="125"/>
 		</StackPanel>
+		
+		<StackPanel Grid.Row="1"
+					Grid.Column="2"
+					VerticalAlignment="Center">
+			<TextBlock Text="Next"
+					   TextAlignment="Center"/>
+			<Image x:Name="NextImage"
+				   Margin="20"
+				   Width="125"/>
+		</StackPanel>
 
 		<Grid x:Name="GameOverMenu"
 		      Background="#CC000000"
